src/objects/Toxicity__c.object
<CustomObject>
    <fields>
        <fullName>AE_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AE Detail</label>
        <referenceTo>AE_Detail__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AE_End_Date__c</fullName>
        <label>AE End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AE_ID__c</fullName>
        <label>AE ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribution__c</fullName>
        <label>Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Unrelated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Probable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Definite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 - Baseline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Baseline_Symptoms_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline Symptoms Form</label>
        <referenceTo>BaselineSymptomsForm__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCAE_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTCAE Code</label>
        <referenceTo>CTCAE_Code__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Did_event_required_hospitalization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did event required hospitalization?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_event_result_in_death__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did event result in death?</description>
        <inlineHelpText>Did event result in death?</inlineHelpText>
        <label>Did event result in death?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_the_investigator_find_event_unusual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did the investigator find this event very unusual and/or potentially serious, but didn&apos;t meet any of the above criteria?</description>
        <inlineHelpText>Did the investigator find this event very unusual and/or potentially serious, but didn&apos;t meet any of the above criteria?</inlineHelpText>
        <label>Did the investigator find event unusual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Onset_Date__c</fullName>
        <label>Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Complaint__c</fullName>
        <label>Patient Complaint</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_conginental_abnormality_defect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Resulted in conginental abnormality/birth defect</description>
        <inlineHelpText>Resulted in conginental abnormality/birth defect</inlineHelpText>
        <label>Result conginental abnormality defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Result_persistent_significant_disability__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did event result in persistent or significant disability/incapacity or substantial disruption of the ability to perform life functions?</description>
        <inlineHelpText>Did event result in persistent or significant disability/incapacity or substantial disruption of the ability to perform life functions?</inlineHelpText>
        <label>Result persistent/significant disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAE__c</fullName>
        <label>SAE</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Symptom_Masters__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Symptom Masters</label>
        <referenceTo>SymptomMaster__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Symptom_Status__c</fullName>
        <label>Symptom Status</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not assessed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Toxicity_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Toxicity Agent</label>
        <referenceTo>Toxicity_Agent__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toxicity_Master__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Toxicity Master</label>
        <referenceTo>Toxicity_Master__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Toxicity_Other__c</fullName>
        <label>Toxicity Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toxicity_Status__c</fullName>
        <label>Toxicity Status</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Assessed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Toxicities</relationshipLabel>
        <relationshipName>Toxicities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_event_life_threatning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was event life threatning at the time of event</description>
        <inlineHelpText>Was event life threatning at the time of event</inlineHelpText>
        <label>Was event life threatning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_toxicity_id__c</fullName>
        <label>pg_toxicity_id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Toxicity</label>
    <nameField>
        <label>Toxicity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Toxicities</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AE_End_Date_Cannot_be_a_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>AE_End_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>AE_End_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Onset_Date_Cannot_be_a_future_date</fullName>
        <active>true</active>
        <errorConditionFormula>Onset_Date__c &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Onset_Date__c</errorDisplayField>
        <errorMessage>You have entered a future date.</errorMessage>
    </validationRules>
</CustomObject>